# SensorManagement

./: Dockerfile  manage.py  metrics.py  pyproject.toml
devices/: admin.py  device_management.py  models.py
devices/migrations/: 0001_initial.py  0002_alter_devicemetric_recorded_at.py  0003_alter_devicemetric_recorded_at.py  0004_alter_devicemetric_recorded_at.py  0005_device_ttn_dev_eui_alter_devicemetric_recorded_at.py  0006_alter_devicemetric_recorded_at.py
sensors/: asgi.py  settings.py  urls.py  wsgi.py
