[tool.poetry]
name = "sensors-wyemake-co-uk"
version = "0.1.0"
description = ""
authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
readme = "README.md"
packages = [{include = "sensors"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
black = "^24.4.2"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-instrumentation-django = "^0.46b0"
opentelemetry-instrumentation-psycopg2 = "^0.46b0"
opentelemetry-instrumentation-logging = "^0.46b0"
django-geoposition-2 = "^0.4.0"
django-crispy-forms = "^2.2"
psycopg2 = "^2.9.9"
what3words = "^3.1.1"
django-postgresql = "^0.0.3"
dj-database-url = "^2.2.0"
django-admin-geomap = "^1.6"
django-environ = "^0.11.2"
django-prometheus = "^2.3.1"
setuptools = "^70.2.0"
python-dotenv = "^1.0.1"
netaddr = "^1.3.0"
djangorestframework = "^3.15.2"
markdown = "^3.6"
django-filter = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
